# stata-expert-lora

./: .env.example  .gitignore  README.md  datacard.md  main.py  modelcard.md  pyproject.toml
configs/: train_config.yaml
data/source/: cheatsheet_data.jsonl  cheatsheet_sample.jsonl
data/unsloth/: alpaca.jsonl  train.jsonl  val.jsonl
data_generator/: __init__.py  expand.py  prompts.py
eval/: evaluate.py
inference/: inference.py
outputs/eval/: README.md  judge_report.jsonl
outputs/inference/: base_outputs.jsonl  finetuned_outputs.jsonl
scripts/: dry_run_validate.py  train_test_split.py  train_unsloth_qlora.py  upload_dataset_to_hub.py  upload_to_hub.py
